--- a/templates/gamePages/playPage.html.twig
+++ b/templates/gamePages/playPage.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
 
 <h2>PLAY PAGE</h2>
-    <label>Choose one:</label><br/>
+    <label>Welcome {{ gameSelected }} Choose one:</label><br/>
     <button onclick="location.href='/result-page/ROCK'" value="ROCK">ROCK</button>
     <button onclick="location.href='/result-page/PAPER'" value="PAPER">PAPER</button>
     <button onclick="location.href='/result-page/SCISSOR'" value="SCISSOR">SCISSOR</button>
